# fastapi_crud

./: .gitignore  README.md  pyproject.toml
api/: main.py
