    [tool.poetry] #poetry 패키지 관리 도구를 사용하여 패키지 메타데이터를 정의
    name = "FastAPI_CRUD" #패키지 이름
    version = "0.1.0" #패키지 버전
    description = "A fastAPI CRUD example" #패키지 설명
    authors = ["yongjun <pacyfi007@gmail.com>"] #패키지 저자 정보 이름과 이메일 입력
    readme = "README.md" #패키지 설명서 파일, 일반적으로 README.md를 사용한다. (마크다운 형식)
    license ="MIT" #패키지 라이센스
    #MIT 라이센스: 소프트웨어 사용자가 소프트웨어를 자유롭게 사용할 수 있도록 허용하는 라이센스
    packages = [{include = "api"}] #패키지에 포함될 모듈

    [tool.poetry.dependencies] #패키지 의존성 정의
    python = ">=3.12" #파이썬 3.12 이상
    fastapi = ">=0.115.12,<0.116.0" #fastAPI 0.115.12  이상 0.116.0 미만
    uvicorn = {extras = ["standard"], version = ">=0.34.0,<0.35.0"} #Uvicorn 0.34.0이상 0.35.0 미만

    [build-system] #빌드 시스템 정의
    requires = ["poetry-core>=2.0.0,<3.0.0"] #Poetry Core 2.0.0 이상 3.0.0 미만
    build-backend = "poetry.core.masonry.api" #poetry Core의 API를 사용하여 패키지를 빌드
